...
        <AttachmentProvider
          canUpload={canUpload}
          uploadAsset={store.uploadAsset}
        >
          <View flex={1} backgroundColor={theme.secondaryBackground.val}>
            <ScreenHeader
              title="Profile"
              backgroundColor={theme.secondaryBackground.val}
              useHorizontalTitleLayout={!isWindowNarrow && shouldShowBackButton}
              backAction={
                shouldShowBackButton ? () => navigation.goBack() : undefined
              }
              rightActions={[
                {
                  id: 'edit-profile',
                  icon: 'EditList',
                  label: 'Edit profile',
                  testID: 'ContactEditButton',
                  onPress: handlePressEdit,
                  visible: Boolean(canEdit),
                },
              ]}
              placement="navigation"
            />
...
