...
          <Text
            fontSize="$m"
            color="$secondaryText"
            textAlign="center"
            lineHeight="$m"
          >
            You're running an older version of Tlon that's no longer supported.
            Please update to continue.
          </Text>
          <Button
            marginTop="$2xl"
            preset="hero"
            label={`View in ${storeName}`}
...
