...
        apps={apps}
        isLoading={isLoading}
        onSelectApp={handleSelectApp}
      />
      <NavBarView
        navigateToContacts={() => {
          navigation.navigate('Contacts');
        }}
        navigateToHome={() => {
          navigation.navigate('ChatList');
        }}
        navigateToNotifications={() => {
          navigation.navigate('Activity');
...
