...
  ];

  const listOptions: Form.ListItemInputOption<
    'chat' | 'notebook' | 'gallery'
  >[] = [
    {
      title: 'Chat',
      subtitle: 'A simple, standard text chat',
      value: 'chat',
      icon: 'ChannelTalk',
    },
    {
      title: 'Notebook',
      subtitle: 'Longform publishing and discussion',
      value: 'notebook',
      icon: 'ChannelNotebooks',
    },
    {
      title: 'Gallery',
      subtitle: 'Gather and arrange rich media',
      value: 'gallery',
      icon: 'ChannelGalleries',
    },
  ];
  const [selectedToggleGroupOption, setSelectedToggleGroupOptions] =
...
