...
              channelType={channelType}
            />
            <PermissionActionButtons onSelectRoles={handleSelectRoles} />
            <Button
              preset="primary"
              onPress={handleCreateChannel}
              label="Create channel"
              loading={isCreating}
              disabled={isCreating}
            />
          </YStack>
        </ScrollView>
      </View>
...
