...
    isWindowNarrow,
  ]);

  const getTitle = () => {
    switch (chatType) {
      case 'group':
        return 'Group info & settings';
      case 'channel':
        return 'Channel info';
      default:
        return 'Info';
    }
  };
...
