...
import { savedContacts } from './fakeData';

export default {
  basic: (
    <FixtureWrapper>
      <AppDataContextProvider contacts={savedContacts} currentUserId="zod">
        <CreateChatSheet defaultOpen={true} trigger={<button>Open</button>} />
      </AppDataContextProvider>
    </FixtureWrapper>
  ),
};

