...
                    onClick={handleLeaveGroup}
                  >
                    Leave Group
                  </button>
                </Popover.Close>
                <Popover.Close asChild>
                  <button className="small-button">OK</button>
                </Popover.Close>
              </div>
            ) : null}
          </div>
          <Popover.Arrow asChild>
            <svg
...
